# snake-game

./: .ycm_extra_conf.py  CMakeLists.txt  README.md
cmake/: Macros.cmake
doc/: Credits.txt
include/snake/Animator/: Animation.hpp  AnimationComponent.hpp  AnimationMemento.hpp  AnimationProcessor.hpp  Animator.hpp  BodyStatesAnimator.hpp  TextureRectFactory.hpp  TextureRectID.hpp  TextureRectMapper.hpp
include/snake/Animator/States/: AnimationState.hpp  BodyAnimationState.hpp  HeadAnimationState.hpp  SpecificPositionAnimationState.hpp  TailAnimationState.hpp
include/snake/Core/: AnyObjectFactory.hpp  MultiStatesHandler.hpp  RandomNumberGenerator.hpp  ResourceHolder.hpp  ResourceHolder.inl
include/snake/Core/EntityComponentSystem/: Component.hpp  ComponentsManager.hpp  Entity.hpp  Entity.inl  EntityCreator.hpp  EntityReceiver.hpp  Procesor.hpp  ProcesorVisitor.hpp  Visitable.hpp  World.hpp  World.inl
include/snake/Core/detail/: DefaultComponentsCreator.hpp  IfElseCondition.hpp
include/snake/Debug/: DebugDraw.hpp  PlayerPhysicWidget.hpp
include/snake/Eventer/: BaseEvent.hpp  BaseReceiver.hpp  Event.hpp  EventInvoker.hpp  EventManager.hpp  EventManager.inl  EventsInvokersComposite.hpp  GeneratorId.hpp  Receiver.hpp
include/snake/Game/: CollisionResponserComposite.hpp
include/snake/Game/Entity/: EntityAbstractCreator.hpp  EntityAbstractCreatorImpl.hpp  EntityWipeOuter.hpp  ProcessorsAttacher.hpp  ProcessorsAttacher.inl
include/snake/Game/Score/: CollisionScoreComponentNotifier.hpp  OverallScoreComponent.hpp  ScorableEntityRandomPositionMaker.hpp  ScoreComponent.hpp  ScoreComputer.hpp  ScoreEvent.hpp  ScoredEntityBodyExtender.hpp
include/snake/Game/System/: GraphicsSystem.hpp  PhysicsSystem.hpp  System.hpp  System.tpp
include/snake/Game/Teleport/: CollisionTeleportComponentNotifier.hpp  EntityAcrossAxsisTeleporter.hpp  TeleportAcrossAxisComponent.hpp  TeleportAcrossAxsisEvent.hpp  TeleportComponent.hpp
include/snake/Physic/: Body.hpp  PhysicComponent.hpp
include/snake/Physic/BodyExtender/: BodyExtender.hpp  DownSideOffsetCreator.hpp  ExtendedBodyComponent.hpp  LeftSideOffsetCreator.hpp  NearHeadBodyExtender.hpp  OffsetCreator.hpp  (+4 more)
include/snake/Renderer/: ColorComponents.hpp  GraphicResources.hpp  Map.hpp  MeshProcessor.hpp  Model.hpp  PhysicComponentScaler.hpp  RenderComponents.hpp  ShapeModel.hpp  SizedShapeCreator.hpp  TexturesComponent.hpp
media/map/: Map.txt
src/: CMakeLists.txt
src/snake/: CMakeLists.txt
src/snake/Animator/: AnimationMemento.cpp  AnimationProcessor.cpp  BodyStatesAnimator.cpp  CMakeLists.txt  CornerRectFactory.cpp  CornerRectFactoryOrthogonalBuilder.cpp  CornerRectFactoryWrapper.cpp  NullAnimationMemento.cpp  NullAnimationMemento.hpp  Recorder.cpp  Recorder.hpp  TextureRectMapper.cpp
src/snake/Animator/States/: AnimationState.cpp  BodyAnimationState.cpp  HeadAnimationState.cpp  SpecificPositionAnimationState.cpp  TailAnimationState.cpp
src/snake/Core/: CMakeLists.txt
src/snake/Core/EntityComponentSystem/: Component.cpp  Entity.cpp  Procesor.cpp  World.cpp
src/snake/Debug/: CMakeLists.txt  DebugDraw.cpp  PlayerPhysicWidget.cpp  imgui_demo.cpp
src/snake/Eventer/: BaseEvent.cpp  BaseReceiver.cpp  CMakeLists.txt
src/snake/Game/: CMakeLists.txt
src/snake/Game/Entity/: EntityAbstractCreatorImpl.cpp  EntityProcessorsAttacher.cpp  EntityProcessorsAttacher.hpp  PlayerProcessorsAttacher.cpp  PlayerProcessorsAttacher.hpp  ProcessorsAttacher.cpp
src/snake/Game/Score/: ScorableEntityRandomPositionMaker.cpp  ScoreComputer.cpp  ScoredEntityBodyExtender.cpp
src/snake/Game/System/: GraphicsSystem.cpp  PhysicsSystem.cpp  System.cpp
src/snake/Game/Teleport/: EntityAcrossAxsisTeleporter.cpp  TeleportAcrossAxsisComponent.cpp
src/snake/Physic/: Body.cpp  CMakeLists.txt  PhysicComponent.cpp
src/snake/Physic/BodyExtender/: BodyExtender.cpp  DownSideOffsetCreator.cpp  LeftSideOffsetCreator.cpp  NearHeadBodyExtender.cpp  NearTailBodyExtender.cpp  RightSideOffsetCreator.cpp  SideOffsetCreator.cpp  UpSideOffsetCreator.cpp
src/snake/Physic/Collision/: BodyCollisionDetector.cpp
src/snake/Physic/Movement/: ChangedDirectionDetector.hpp  DirectionResponser.cpp  DirectionResponser.hpp  HorizontalDirectionDetector.cpp  HorizontalDirectionDetector.hpp  KeyboardMoveCommandListener.cpp  MoveBehaviourProcessor.cpp  MoveCommandFactory.cpp  MoveCommandsMapper.cpp  MoveCommandsMapper.hpp  MoveCommandsProcessor.cpp  MoveDownCommand.cpp  MoveDownState.cpp  MoveDownState.hpp  MoveLeftCommand.cpp  MoveLeftState.cpp  MoveLeftState.hpp  MoveRightCommand.cpp  MoveRightState.cpp  MoveRightState.hpp  MoveState.cpp  MoveState.hpp  MoveStateFactory.cpp  MoveStateFactory.hpp  MoveUpCommand.cpp  MoveUpState.cpp  MoveUpState.hpp  NullMoveCommand.cpp  NullMoveState.cpp  NullMoveState.hpp  UnknowDirectionDetector.cpp  UnknowDirectionDetector.hpp  VerticalDirectionDetector.cpp  VerticalDirectionDetector.hpp  WormMoveBehaviour.cpp
src/snake/Physic/Rotation/: BodyHeadDetachedRotator.cpp  BodyHeadRotator.cpp  Direction.cpp  Direction.hpp  DirectionResponser.hpp  HeadHorizontalFunctor.hpp  HeadUnknownDirectionFunctor.hpp  HeadVerticalFunctor.hpp  Horizontal.cpp  Horizontal.hpp  OrthogonalDirectionResponser.cpp  OrthogonalDirectionResponser.hpp  RotationProcessor.cpp  UnknownDirection.cpp  UnknownDirection.hpp  Vertical.cpp  Vertical.hpp
src/snake/Renderer/: CMakeLists.txt  FileStreamReader.hpp  Map.cpp  MeshProcessor.cpp  TitleCreator.cpp  TitleCreator.hpp
tests/: CMakeLists.txt
tests/IntegrationTests/Debug/: DebugDrawTest.cpp
tests/IntegrationTests/Game/: SpecificCollisionTypeNotifierIntegrationTest.cpp
tests/UnitTests/Animator/: BodyStateAnimatorTest.cpp
tests/UnitTests/Core/: DefaultComponentsCreatorTest.cpp  WorldTest.cpp
tests/UnitTests/Eventer/: DummyEvent.hpp  EventInvokerTest.cpp  EventManagerTest.cpp  MockReceiver.hpp
tests/UnitTests/Physic/: BodyCollisionDetectorTest.cpp  BodyHeadRotatorTest.cpp  MoveCommandListenerTest.cpp  MovementCommandFactoryTest.cpp  NearHeadBodyExtender.cpp  NearTailBodyExtender.cpp  WormMoveBehaviourTest.cpp
(+24 files in other folders)
